[gd_scene load_steps=8 format=2]

[ext_resource path="res://menu_scene.gd" type="Script" id=1]
[ext_resource path="res://ASSERTS/inside/menugame.png" type="Texture" id=2]
[ext_resource path="res://ASSERTS/inside/confirmation_001.ogg" type="AudioStream" id=3]
[ext_resource path="res://ASSERTS/inside/pixel.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://ASSERTS/inside/icielBrandonText-Bold.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 17
font_data = ExtResource( 5 )

[node name="menu_scene" type="Node2D"]
script = ExtResource( 1 )

[node name="Menugame" type="Sprite" parent="."]
position = Vector2( 525.778, 299.25 )
scale = Vector2( 0.555093, 0.555093 )
texture = ExtResource( 2 )

[node name="play_game" type="Button" parent="."]
margin_left = 544.0
margin_top = 185.0
margin_right = 710.0
margin_bottom = 218.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="store" type="Button" parent="."]
margin_left = 280.0
margin_top = 480.0
margin_right = 406.0
margin_bottom = 512.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="minigame" type="Button" parent="."]
margin_left = 722.0
margin_top = 434.0
margin_right = 841.0
margin_bottom = 464.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 3.0
margin_top = 66.0
margin_right = 127.0
margin_bottom = 88.0
custom_colors/font_color = Color( 0.560784, 0.372549, 0.294118, 1 )
custom_fonts/font = SubResource( 1 )
text = "#####"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 74.0
margin_top = 29.0
margin_right = 219.0
margin_bottom = 54.0
custom_colors/font_color = Color( 0.560784, 0.372549, 0.294118, 1 )
custom_fonts/font = SubResource( 2 )
text = "###"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="play_game" to="." method="_on_play_game_pressed"]
[connection signal="pressed" from="store" to="." method="_on_store_pressed"]
[connection signal="pressed" from="minigame" to="." method="_on_minigame_pressed"]
